ajout de composant secueity de symfony

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -13,4 +13,18 @@
 <button class="btn btn-primary bt">s'enregistrer</button>
 
 </div>
+
+
+<div class="container">
+
+
+
+
+
+
+</div>
+
+
+
+</div>
 {% endblock %}
