--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,7 +32,7 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">login</a>
+          <a class="nav-link" href="{{path('registration')}}">login</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">conatct us </a>
