--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,10 +32,10 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{path('registration')}}">login</a>
+          <a class="nav-link" href="{{path('registration')}}">Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">conatct us </a>
+          <a class="nav-link" href="#">Login</a>
         </li>
        
       </ul>
