--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -7,7 +7,11 @@
 <div class="container">
 <h1>Inscription sur le site </h1>
 {{ form_start(form) }}
-{{ form_widget(form) }}
+<div class="form-group"> {{ form_row(form.username, { 'attr' : { 'class' : 'form-control'}}) }}</div>
+<div class="form-group">{{ form_row(form.email, { 'attr' : { 'class' : 'form-control'}}) }}</div>
+<div class="form-group">{{ form_row(form.password, { 'attr' : { 'class' : 'form-control'}}) }}</div>
+<div class="form-group">{{ form_row(form.confirm_password, { 'attr' : { 'class' : 'form-control'}}) }}</div>
+
 <button type="submit" class="btn btn-danger">inscription</button>
 {{ form_end(form) }}
 
